# Salzburg

./: .rosinstall  Readme.md  TODOLIST.md
ROS_pkgs/: README.md  export_master.sh  opencv-ros_bridge.cpp
ROS_pkgs/calibration_files/: BumbleBee.txt
ROS_pkgs/planner/: CMakeLists.txt  README.md  package.xml
ROS_pkgs/planner/include/: AnytimePlanning.h  URRobot.h
ROS_pkgs/planner/src/: AnytimePlanning.cpp  URRobot.cpp  anytime_planner.cpp  backwards.cpp  collision_detector.cpp  listener_ball.cpp  listener_coll.cpp  main.cpp  main.cpp.backup  planner.cpp  test_collision.cpp
ROS_pkgs/red_ball_detection/: CMakeLists.txt  README.md  package.xml
ROS_pkgs/red_ball_detection/calibration/: BumbleBee_from_camera.txt  BumbleBee_from_robot.txt  BumbleBee_from_robot_2.txt  ost.txt  right.yaml
ROS_pkgs/red_ball_detection/include/: ObstacleDetection.h  Stereopsis.h  kalman_3d.h
ROS_pkgs/red_ball_detection/launch/: image_detectors.launch  static_detection.launch
ROS_pkgs/red_ball_detection/msgs/: ballCentrum.msg  ballToRobotBase.msg
ROS_pkgs/red_ball_detection/src/: ObstacleDetection.cpp  Stereopsis.cpp  detector_left_image.cpp  detector_right_image.cpp  draw_utils.hpp  kalman_3d.cpp  kalman_ros.cpp  triangulation.cpp
ROS_pkgs/robot_state_monitoring/: CMakeLists.txt  package.xml
ROS_pkgs/robot_state_monitoring/src/: main.cpp
ROS_pkgs/ur5_path_interface/: CMakeLists.txt  package.xml
ROS_pkgs/ur5_path_interface/src/: executioner.cpp
ROS_pkgs/ur_caros_example/: CMakeLists.txt  package.xml
ROS_pkgs/ur_caros_example/WorkCell/: CollisionSetup.xml  Scene.wc.xml
ROS_pkgs/ur_caros_example/WorkCell/Geometry/: foot.ac  foot.stl  ground_obs.stl
ROS_pkgs/ur_caros_example/WorkCell/UR/: UR.wc.xml
ROS_pkgs/ur_caros_example/WorkCell/UR/geometry/: rob_5c.ac
ROS_pkgs/ur_caros_example/src/: ur_caros_example.cpp
ROS_pkgs/ur_pathPlanning/: CMakeLists.txt  Readme.md  package.xml
ROS_pkgs/ur_pathPlanning/src/: main.cpp
ROS_pkgs/ur_path_planning/: CMakeLists.txt  Readme.md  package.xml
RWStudio/: collision_pathplanning.cpp
RWStudio/genfiles/: backwards_path.txt  backwards_path_interpolated.txt  backwards_trajectory  cleanPath.csv  cleanPath.txt  clean_path.lua  path_interpolated.txt  path_original.txt
RWStudio/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  planner.cpp  planning
RWStudio/tests/trajectory/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  robwork-release-0.7.0.cfg.xml  trajectory  trajectory.cpp
RobWorkStudioPlugin/: CMakeLists.txt  README.md  package.xml
RobWorkStudioPlugin/src/: RobotPlugin.cpp  RobotPlugin.hpp  RobotPlugin.ui  plugin.json  qtros.cpp  qtros.h
Triangulation/: Readme.md
Triangulation/bumblebee/: backup.txt
Triangulation/calibrationdata/: left.yaml
WorkCell_scenes/WorkStation_2/: WC2_Scene.wc.xml
WorkCell_scenes/WorkStation_2/Geometry/: ball.stl  ball_2.stl
WorkCell_scenes/WorkStation_2_with_ball/: CollisionSetup.xml  WC2_Scene.wc.xml
WorkCell_scenes/WorkStation_2_with_ball/Geometry/: Table_noconv.stl  computer_noconv.stl
WorkCell_scenes/WorkStation_2_with_ball/UR/: Device.xml  EasyBotCollisionSetup.xml  UR.wc.xml
anytime_planning_avd/: CMakeLists.txt  package.xml
anytime_planning_avd/include/anytime_planning_avd/: anytime_planning.h
anytime_planning_avd/nodes/: anytime_planning_node.cpp  random_ball_motion_node.cpp
anytime_planning_avd/src/: anytime_planning.cpp
doc/src/: rovi2_system.drawio
frames/: CMakeCache.txt  Frame_Operations  Makefile  cmake_install.cmake  frame_ops.cpp
frames/Stereo_Ops/: CMakeCache.txt  Makefile  Stereo_Operations  cmake_install.cmake  stereo_ops.cpp
kalman_tracking_3d/: CMakeLists.txt  package.xml
kalman_tracking_3d/include/kalman_tracking_3d/: kalman_tracking_3d.h
kalman_tracking_3d/src/: kalman_tracking_3d.cpp
other/Triangulation/: CMakeLists.txt
other/Triangulation/src/: methods.hpp  stereopsis.cpp
other/frames/: CMakeLists.txt
other/frames/Stereo_Ops/: CMakeLists.txt
perception_avd/: CMakeLists.txt  package.xml
perception_avd/include/perception_avd/: common_perception.h  kinect_detection.h  red_ball_detection.h  stereopsis.h
perception_avd/nodes/: kinect_detection_node.cpp  monocular_node.cpp  red_ball_detection_node.cpp  stereopsis_node.cpp
perception_avd/src/: common_perception.cpp  kinect_detection.cpp  red_ball_detection.cpp  stereopsis.cpp
report/: References.bib  main.tex  titlepage.tex
report/Images/: arch.xml  definedpoints.xml
report/src/: Robotics.tex  annex.tex  arch.tex  calib.tex  conclusion.tex  introduction.tex  results.tex  ros.tex
report/src/vision/: kalman_f.tex  (+2 more)
rovi2_demo_manager/: CMakeLists.txt  package.xml
rovi2_demo_manager/config/: asus.yaml  bumblebee_left.yaml  bumblebee_right.yaml  kinect_params.yaml  left_detector_params.yaml  monocular.yaml  moveit_config.yaml  planner_config.yaml  right_detector_params.yaml  sim_left.yaml  sim_right.yaml  stereopsis_params.yaml  workcell.rviz
rovi2_demo_manager/launch/: anytime_planner.launch  kinect_camera.launch  monocular_triangulation.launch  scene_gazebo.launch  scene_upload.launch  stereo_detectors.launch  triangulation.launch
rovi2_msgs/: CMakeLists.txt  package.xml
rovi2_msgs/msg/: boundingBox.msg  boundingBoxes.msg  point2d.msg  point3d.msg  points2d.msg  points3d.msg
stereo_vision_avd/: CMakeLists.txt  package.xml
stereo_vision_avd/include/stereo_vision_avd/: red_ball_detection.h  stereopsis.h
stereo_vision_avd/nodes/: red_ball_detection_node.cpp  stereopsis_node.cpp
stereo_vision_avd/src/: red_ball_detection.cpp  stereopsis.cpp
tests/: anytime_planner_07-05-2018.md  anytime_planner_07-05-2018.txt  calibration_test.md  collision_detector_test.md  move_ball_test.md  new_calib_file.md  plan.txt  test_collision_detector_runtime.md  trajectory.txt  trayectory_giant_ball.txt
workcell_scene_description/: CMakeLists.txt  package.xml
workcell_scene_description/config/: ur5.yaml
workcell_scene_description/urdf/: asus_camera.urdf.xacro  real_setup_workcell.urdf.xacro  red_ball.urdf  workcell.urdf.xacro
(+19 files in other folders)
