<?xml version="1.0"?>
<package>
  <name>robot_plugin</name>
  <version>0.0.0</version>
  <description>
  		RobWorkStudio pkg for simulation. 
		ROVI2 final project: Obstacle Avoidance.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cavie17@student.sdu.dk">Carlos</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  
  <!--   <test_depend>gtest</test_depend> -->
 <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>caros_common_msgs</build_depend>
  <build_depend>caros_common_robwork</build_depend>
  <build_depend>caros_control_msgs</build_depend>
  <build_depend>caros_common</build_depend>
  <build_depend>caros_control</build_depend>
  <build_depend>serial_device_si_proxy</build_depend>
  
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
