<?xml version="1.0"?>
<package format="2">
  <name>anytime_planning_avd</name>
  <version>0.0.0</version>
  <description>The anytime_planning_avd package</description>

  <maintainer email="cavie17@student.sdu.com">Carlos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>gazebo_msgs</depend>
  <depend>rovi2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>

</package>