<?xml version="1.0"?>
<package format="2">
  <name>anytime_planning_avd</name>
  <version>0.0.0</version>
  <description>The anytime_planning_avd package</description>

  <maintainer email="cavie17@student.sdu.com">Carlos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>gazebo_msgs</depend>
  <depend>rovi2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>moveit_core</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_simple_controller_manager</depend>

  <depend>yaml-cpp</depend>

  <export>
  </export>

</package>