<?xml version="1.0"?>
<package format="2">
  <name>kalman_tracking_3d</name>
  <version>0.0.0</version>
  <description>The kalman_tracking_3d package</description>

  <maintainer email="cavie17@student.sdu.com">Carlos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>eigen</depend>

  <export>
  </export>

</package>