<?xml version="1.0"?>
<package format="2">
  <name>perception_avd</name>
  <version>0.0.0</version>
  <description>The perception_avd package</description>

  <maintainer email="cavie17@student.sdu.com">Carlos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>rovi2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>eigen</depend>
  <depend>message_filters</depend>
  <depend>kalman_tracking_3d</depend>
  <depend>pcl_conversions</depend>

  <export>
  </export>

</package>