<?xml version="1.0"?>
<package format="2">
  <name>rovi2_msgs</name>
  <version>1.0.0</version>
  <description>The rovi2_msgs package</description>

  <maintainer email="cavie17@student.sdu.com">Carlos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <export>
  </export>

</package>
