<?xml version="1.0"?>
<package>
  <name>robot_state_monitoring</name>
  <version>1.0.0</version>
  <description>Outputs robot state for monitoring purposes</description>
  <maintainer email="cavie17@student.sdu.dk">Carlos</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

</package>
