<?xml version="1.0"?>
<package>
  <name>ur_caros_example</name>
  <version>1.0.0</version>
  <description>The UR_CAROS_example package</description>
  <maintainer email="fh@mmmi.sdu.dk">frederik</maintainer>
  <license>Beerware</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
</package>
