<?xml version="1.0"?>
<package format="2">
  <name>ur_path_planning</name>
  <version>0.0.0</version>
  <description>How to make UR5 follow a pre-planned path</description>

  
  <maintainer email="cavie17@student.sdu.dk">charlie</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>

  <export>
  </export>
</package>
